--- a/config.sample.json
+++ b/config.sample.json
@@ -1,8 +1,10 @@
 {
+  "hostname": "kr.mirrors.naho.moe",
   "mirrors": [
     {
       "id": "armbian-apt",
       "name": "armbian/apt",
+      "path": "/armbian/apt",
       "frequency" : 3600,
       "protocols": [
         "HTTPS",
@@ -12,6 +14,7 @@
     {
       "id": "armbian-dl",
       "name": "armbian/dl",
+      "path": "/armbian/dl",
       "frequency": 3600,
       "protocols": [
         "HTTPS",
@@ -21,6 +24,7 @@
     {
       "id": "armbian-cache",
       "name": "armbian/cache",
+      "path": "/armbian/cache",
       "frequency": 3000,
       "protocols": [
         "HTTPS",
